# mactaquac

./: .env  .env .example  .gitignore  README.md  docker-compose.yaml
app/: .gitignore  Dockerfile  pyproject.toml
app/core/: celery.py  settings.py  urls.py  views.py
app/mactaquac/: admin.py  apps.py  forms.py  mediafile.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/mactaquac/static/mactaquac/: style.css
app/mactaquac/templates/mactaquac/: accession.html  base.html  filelist.html  home.html  mediafile.html
dagster/: Dockerfile
nginx/: nginx.conf
support_scripts/: add_checksum.py  add_files.py  add_files_async.py  add_item_info.py  main.py  mediafile.py  prune_deleted.py  pyproject.toml
