[project]
name = "app"
version = "0.2.1"
description = "Mactaquac web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.0",
    "django>=6.0.1",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "gunicorn>=23.0.0",
    "packaging>=25.0",
    "psycopg2-binary>=2.9.11",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
]
