[project]
name = "app"
version = "0.4.1"
description = "Mactaquac web app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "celery>=5.6.2",
    "django>=6.0.2",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "packaging>=26.0",
    "polars>=1.39.2",
    "psycopg2-binary>=2.9.11",
    "pymediainfo>=7.0.1",
    "redis>=7.3.0",
    "sqlparse>=0.5.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
]
